# aoc2024-haskell

./: README.md  aoc2024.cabal  package.yaml  stack.yaml
.github/workflows/: haskell.yml
src/: Day1.hs  Day10.hs  Day11.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
src/Data/: Matrix.hs  Point.hs
src/Data/HashSet/: Extra.hs
src/Data/List/: Extra.hs
src/Day4/: Matrix.hs
src/Day6/: Guard.hs
test/: Day10Spec.hs  Day1Spec.hs  Day2Spec.hs  Day3Spec.hs  Day4Spec.hs  Day5Spec.hs  Day6Spec.hs  Day7Spec.hs  Day8Spec.hs  Day9Spec.hs
